cs352/proj3/tests/syntax/invalid/6.js
<script type="text/JavaScript">
if(){

}
</script>
